--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -27,4 +27,4 @@ jobs:
              Invoke-WebRequest $sourceNugetExe -OutFile $targetNugetExe
       - name: Push generated package to GitHub registry
         run: |
-          .\nuget push .\XiangJiang.Logging.EventLog\bin\Release\*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbols
+          .\nuget push .\XiangJiang.Logging.Windows.EventLog\bin\Release\*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbols
