--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,4 +1,4 @@
-name: .NET Core
+name: .NET 5
 
 on:
   pull_request:
@@ -10,10 +10,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET Core
+      - name: Setup .NET 5
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.301
+          dotnet-version: 5.0.100
       - name: Install dependencies
         run: dotnet restore
       - name: Build
@@ -27,4 +27,4 @@ jobs:
              Invoke-WebRequest $sourceNugetExe -OutFile $targetNugetExe
       - name: Push generated package to GitHub registry
         run: |
-          .\nuget push .\XiangJiang.Logging.EventLog\bin\Release\*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbols
+          .\nuget push .\XiangJiang.Logging.Windows.EventLog\bin\Release\*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NugetKey }} -NoSymbols
